<resources>
    <string name="app_name">Who, Where, When?</string>
    <string name="login">LOG IN</string>
    <string name="username">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">Log in</string>
    <string name="toDo">TO DO</string>
    <string name="inProgress">IN PROGRESS</string>
    <string name="done">DONE</string>
    <string name="User">User</string>
    <string name="Report">Report</string>

    <string name="tableHeaderText">TO DO</string>
    <string name="add_button">AddButton</string>
    <string name="floatingButton">AddButton</string>
    <string name="GroupByUser">Group By User</string>
    <string name="GroupByCategory">Group By Category</string>
    <string name="ResetGrouping">Reset Grouping</string>
    <string name="ReloadTasks">Reload Tasks</string>
    <string name="Logout">Logout</string>
    <string name="task_creation_title">Title</string>
    <string name="task_creation_description">Description</string>
    <string name="task_creation_real_time">Real time</string>
    <string name="task_creation_estimated_time">Estimated time</string>
    <string name="save_task">Save task</string>
    <string name="back">Back</string>
    <string name="report">Report</string>
    <string name="taskCompleted">Number of completed tasks:  </string>
    <string name="inProgressTasks">In progress tasks:  </string>
    <string name="toDoTasks">To do tasks:  </string>
    <string name="totalEstimatedTime">Total estimated time:   </string>
    <string name="totalRealTime">Total real time:  </string>
    <string name="Board">Board</string>
    <string name="category">Category</string>
    <string name="no_data_text">No data available, add new task or drag and drop existing one here.</string>
    <string name="tasks_status_report">Tasks Status Report</string>
    <string name="zero">0</string>
    <string name="tasks_time_report">Tasks Time Report</string>
    <string name="estimated_time">ESTIMATED TIME</string>
    <string name="real_time">REAL TIME</string>
    <string name="delete_task">DELETE TASK</string>
    <string name="log_in">LOG IN</string>

</resources>