<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Task Creation"
            android:textAlignment="center"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/task_creation_title"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Status"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/tableTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:text="Participant"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/users_spinner"
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:hint="@string/category" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:hint="@string/task_creation_description" />

        <EditText
            android:id="@+id/estimated_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_creation_estimated_time"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/real_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_creation_real_time"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/dependencyCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Depends on other task?" />


        <TextView
            android:id="@+id/causerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Task dependency causer"
            android:textSize="15sp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/tasks_spinner"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:visibility="invisible" />


        <Button
            android:id="@+id/btnSaveTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save_task" />


    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>