<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completedTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskCompleted"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/amount_of_completed_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/completedTasks"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/inProgressTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inProgressTasks"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completedTasks" />

    <TextView
        android:id="@+id/amount_of_in_progress_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/inProgressTasks"
        app:layout_constraintTop_toBottomOf="@+id/completedTasks" />

    <TextView
        android:id="@+id/toDoTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toDoTasks"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inProgressTasks" />

    <TextView
        android:id="@+id/amount_of_toDo_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/toDoTasks"
        app:layout_constraintTop_toBottomOf="@+id/inProgressTasks" />

    <TextView
        android:id="@+id/totalEstimatedTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalEstimatedTime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toDoTasks" />

    <TextView
        android:id="@+id/estimated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/totalEstimatedTimeText"
        app:layout_constraintTop_toBottomOf="@+id/toDoTasks" />
    <TextView
        android:id="@+id/total_real_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalRealTime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalEstimatedTimeText" />

    <TextView
        android:id="@+id/real_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/total_real_time_text"
        app:layout_constraintTop_toBottomOf="@+id/totalEstimatedTimeText" />


    <Button
        android:id="@+id/btnBack"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>